--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,17 @@
 /* Google fonts */
 
-@import url('https://fonts.googleapis.com/css?family=Lato|Slabo+27px');
-@import url('https://fonts.googleapis.com/css?family=Oswald:300,400|Source+Sans+Pro:300,400');
-
+@import url('https://fonts.googleapis.com/css?family=Lora|Slabo+27px');
 /* 
-font-family: 'Oswald', sans-serif;
-font-family: 'Source Sans Pro', sans-serif;
-*/
+font-family: 'Lora', serif;
+font-family: 'Slabo 27px', serif; */
+
 
 /* global stuff */
 
 h1 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lora', serif;
     font-weight: 100;
-    font-size: 4em;
+    font-size: 3.2em;
 }
 
 /* FIrst background Image */
@@ -22,7 +20,7 @@ h1 {
     
     background:  url("../img/03.jpeg");
     background-size: cover; 
-    background-position: top center;
+    background-position: top;
     background-repeat: no-repeat;
     height: 100vh;
     width: 100%;
@@ -39,11 +37,12 @@ nav {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    /* padding-left: 1.65em; */
     
 }
 
 nav a {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Slabo 27px', serif;
     font-weight: 300;
     text-transform: uppercase;
     font-size: 1.3em;
@@ -51,6 +50,7 @@ nav a {
     color: #F9F8F8;
     padding: 1em;
     margin-top: 1em;
+    ;
 
     transition: ease-in-out 250ms;
    
@@ -78,7 +78,7 @@ nav a:hover, nav a:focus, nav a:active {
     padding-top: 2em;
 
     background: rgba(110, 113, 120, 0.507); 
-    border-radius: 1em;
+    /* border-radius: 1em; */
     -webkit-box-shadow: 0px 0px 11px 0px #00000041; 
     box-shadow: 0px 0px 11px 0px #0000003d;
 
@@ -130,9 +130,9 @@ nav a:hover, nav a:focus, nav a:active {
 
 
 .main-header, .main-header1, .main-header2 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lora', serif;
     font-weight: 100;
-    font-size: 4em;
+    font-size: 3.5em;
 
     margin: -50px 0 0 0;
 
@@ -148,7 +148,7 @@ nav a:hover, nav a:focus, nav a:active {
 
 
 .main-text, .main-text1, .main-text2 {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Slabo 27px', serif;
     font-weight: 400;
     text-align: center;
     max-width: 35em;
@@ -167,14 +167,27 @@ nav a:hover, nav a:focus, nav a:active {
 ==================================*/
 
 
+@keyframes fadeIn {
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
 
 .content {
     background-image: url("../img/01.jpeg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-    height: 250vh;
+
     width: 100%;
+    height: 100%
 
     
 
@@ -182,44 +195,53 @@ nav a:hover, nav a:focus, nav a:active {
 
 .content-title {
     width: 80%;
+    height: 18em;
     margin: 0 auto;
+
+    
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    
 }
 
 .content-header {
     text-align: center;
     text-transform: uppercase;
-    margin-top: 2em;
+    margin-top: .3em;
     margin-bottom: .3em;
     color: #1D3557;
-    /* display: none; */
+    display: none;
+    animation: fadeIn 1s ease-in;
+    
+    
 }
 
 .content-text {
     text-align: center;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
+    font-family: 'Slabo 27px', serif;
+    /* font-weight: 300; */
     font-size: 1.3em;
     margin-top: 10px;
     color: #1D3557;
     max-width: 30em;
+    display: none;
+    animation: fadeIn 1s ease-in;
 }
 
 .section-info {
     width: 90%;
-    margin: 0 auto;
-    margin-top: 2em;
+    margin: 2em auto;
+    
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 
     background: rgba(245, 245, 245, 0.493);
-    border-radius: 2em;
+    /* border-radius: 2em; */
 
     -webkit-box-shadow: 0px 0px 11px 0px #00000041; 
     box-shadow: 0px 0px 11px 0px #0000003d;
@@ -248,7 +270,7 @@ nav a:hover, nav a:focus, nav a:active {
     color: #1D1E18;
     background: #CA054D;
     padding: 1rem;
-    border-radius: 20%;
+    /* border-radius: 20%; */
     -webkit-box-shadow: 0px 0px 11px 0px #00000041; 
     box-shadow: 0px 0px 11px 0px #0000003d;
 }
@@ -257,7 +279,7 @@ nav a:hover, nav a:focus, nav a:active {
     color: #1D1E18;
     background: #43AA8B;
     padding: 1rem;
-    border-radius: 20%;
+    /* border-radius: 20%; */
     -webkit-box-shadow: 0px 0px 11px 0px #00000041; 
     box-shadow: 0px 0px 11px 0px #0000003d;
 }
@@ -269,21 +291,21 @@ nav a:hover, nav a:focus, nav a:active {
     background: #FEB95F;
     padding: 1.5rem 1rem;
 
-    border-radius: 20%;
+    /* border-radius: 20%; */
     -webkit-box-shadow: 0px 0px 11px 0px #00000041; 
     box-shadow: 0px 0px 11px 0px #0000003d;
 }
 
 .section-header {
 
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lora', serif;
     font-weight: 100;
     font-size: 2.5em;
     text-transform: uppercase;
 }
 
 .section-text {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Slabo 27px', serif;
     font-size: 1em;
 }
 
