--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ nav a:active {
 /* Hero Image and content */
 
 .hero {
-    display: flex;
+    display: none;
     flex-direction: column;
     height: 70vh;
     width: 90%;
