--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
     background-position: top;
     background-repeat: repeat-x;
     background-attachment: fixed;
-    width: 100vw;
+    width: 100%;
 
     margin: 0 auto;
 }
