--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,12 @@ h1 {
     }
 }
 
+*, *:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
 
 /* FIrst background Image */
 
@@ -101,7 +107,7 @@ nav a:active {
 .hero {
     display: none;
     flex-direction: column;
-    height: 70vh;
+    height: 80%;
     width: 90%;
     margin: 0 auto;
     justify-content: center;
@@ -361,32 +367,125 @@ nav a:active {
 }
 
 
-/* ===========================================
-===============================================
- */
-
-.content-2 {
-    width: 100%;
-    height: 100vh;
-}
-
-.content-2-img {
-    position: relative;
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: blur(3px);
-}
-
 
 /* ================================================================ */
 
 .test-box {
 
     width: 90%;
-    height: 100vh;
     margin: 0 auto;
     background: rgba(255, 255, 255, 0.219);
     border-radius: 1em;
+    display: flex;
+    align-items: center;
+
 }
 
+.comment-box {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.comment-box img {
+    max-width: 15em;
+    border-radius: 50%;
+    margin: 2em;
+    -webkit-box-shadow: -6px 13px 67px 8px rgba(0,0,0,0.75);
+    -moz-box-shadow: -6px 13px 67px 8px rgba(0,0,0,0.75);
+    box-shadow: -6px 13px 67px 8px rgba(0,0,0,0.75);
+
+  
+}
+
+
+.comment-section {
+    width: 30em;
+    height: 25em;
+}
+
+.comment-header {
+    font-family: 'Libre Franklin', sans-serif;
+    font-size: 3em;
+    text-align: center;
+}
+    
+
+/* ===================== */
+
+.mb-wrap {
+    margin : 20px auto; 
+    padding : 20px; 
+    position : relative; 
+    max-width: 45em;
+  } 
+  
+  .mb-wrap p {
+    margin : 0; 
+    padding : 0; 
+  }
+  
+  .mb-wrap blockquote {
+    margin : 0; 
+    padding : 0; 
+    position : relative; 
+  } 
+  
+  .mb-wrap cite {
+    font-style : normal; 
+  } 
+  
+  .mb-style-2 blockquote {
+    padding-top : 150px; 
+    text-align: center;
+  } 
+  
+  .mb-style-2 blockquote:after {
+      background: none repeat scroll 0 0 rgba(254, 95, 95, 0.596);
+      border-radius: 50% 50% 50% 50%;
+      color: rgb(255, 255, 255);
+      content: "❞";
+      font-family: 'icons';
+      font-size: 70px;
+      height: 130px;
+      left: 50%;
+      line-height: 130px;
+      margin-left: -65px;
+      position: absolute;
+      text-align: center;
+      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
+      top: 0;
+      width: 130px;
+  }
+  
+  
+  .mb-style-2 blockquote p {
+    /* background : none repeat scroll 0 0 rgba(255, 255, 255, 0.5);  */
+    box-shadow : 0 -6px 0 rgba(254, 95, 95, 0.5);
+    color : rgb(255, 255, 255);
+    display : inline; 
+    font-family : Baskerville, Georgia, serif; 
+    font-style : italic; 
+    font-size : 28px; 
+    line-height : 46px; 
+  } 
+  
+  .mb-attribution {
+    text-align : right; 
+  } 
+  
+   .mb-author {
+    color : rgb(255, 255, 255);
+    font-size : 18px; 
+    font-weight : bold;  
+    text-shadow : 0 1px 1px rgba(255, 255, 255, 0.1); 
+    text-transform : uppercase; 
+    padding-right: 3em;
+  }  
+  
