--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1 {
 /* FIrst background Image */
 
 .header {
-    background-image: linear-gradient( 135deg, #3B2667 10%, #BC78EC 100%);
+    /* background-image: linear-gradient( 135deg, #3B2667 10%, #BC78EC 100%); */
     /* url("../img/leavy.jpeg"); */
     background-size: cover;
     background-position: top;
@@ -78,7 +78,7 @@ nav a {
     text-transform: uppercase;
     font-size: 1.3em;
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color:rgb(10, 17, 40);
     padding: .7em;
     margin-top: 1em;
     transition: ease-in-out 250ms;
@@ -91,7 +91,7 @@ nav a {
         text-transform: uppercase;
         font-size: 1em;
         text-decoration: none;
-        color: rgb(255, 255, 255);
+        color:rgb(10, 17, 40);
         padding: .7em;
         margin-top: 1em;
         transition: ease-in-out 250ms;
@@ -102,7 +102,7 @@ nav a:hover,
 nav a:focus,
 nav a:active {
     transform: translateY(3px);
-    color: rgba(255, 255, 255, 0.603);
+    color:rgba(10, 17, 40, 0.651);
 }
 
 
@@ -121,7 +121,7 @@ nav a:active {
     justify-content: center;
     align-items: center;
     padding-top: 2em;
-    background-image: linear-gradient( 135deg, rgba(59, 38, 103, 0.61) 10%, rgba(188, 120, 236, 0.61) 100%);
+    background: rgba(10, 17, 40, 0.623);
     border-radius: 1em;
     -webkit-box-shadow: 0px 0px 11px 0px #00000041;
     box-shadow: 0px 0px 11px 0px #0000003d;
@@ -482,6 +482,6 @@ nav a:active {
 
 .gallery {
     height: 100vh;
-    background: #333;
+    background: rgba(51, 51, 51, 0.377);
     margin-top: 2em;
 }
