--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ nav a:active {
     justify-content: center;
     align-items: center;
     padding-top: 2em;
-    background: rgba(10, 17, 40, 0.623);
+    /* background: rgba(10, 17, 40, 0.623); */
     border-radius: 1em;
     -webkit-box-shadow: 0px 0px 11px 0px #00000041;
     box-shadow: 0px 0px 11px 0px #0000003d;
@@ -289,7 +289,7 @@ nav a:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background: rgba(10, 17, 40, 0.623);
+    /* background: rgba(10, 17, 40, 0.623); */
     border-radius: 1em;
     -webkit-box-shadow: 0px 0px 11px 0px #00000041;
     box-shadow: 0px 0px 11px 0px #0000003d;
@@ -369,11 +369,14 @@ nav a:active {
 .test-box {
     width: 90%;
     margin: 0 auto;
-    background: rgba(10, 17, 40, 0.623);
+    /* background: rgba(10, 17, 40, 0.623); */
     border-radius: 1em;
     display: flex;
     align-items: center;
     opacity: 0;
+
+    -webkit-box-shadow: 0px 0px 11px 0px #00000041;
+    box-shadow: 0px 0px 11px 0px #0000003d;
 }
 
 .comment-box {
