--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,14 @@ html {
     
 }
 
-h1 {
+h1, h2 {
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
     font-size: 3.2em;
+}
+
+p {
+    font-family: 'Libre Franklin', sans-serif; 
 }
 
 @media (max-width: 363px) {
@@ -172,7 +176,12 @@ nav a:active {
     text-transform: uppercase;
     color: #F9F8F8;
     animation: fadeinDown 9s infinite;
+    text-shadow: -5px -5px 0 rgb(0, 0, 0);
+    transition: ease-out 300ms;
+
+   
 }
+
 
 .main-text,
 .main-text1,
@@ -201,6 +210,7 @@ nav a:active {
         text-transform: uppercase;
         color: #F9F8F8;
         animation: fadeinDown 9s infinite;
+        
     }
     .main-text,
     .main-text1,
@@ -254,28 +264,23 @@ nav a:active {
     display: flex;
     /* animation: fadeIn 1s ease-in; */
     opacity: 0;
+    text-shadow: -5px -5px 0 rgb(0, 0, 0);
+    transition: ease-out 300ms;
 }
+
 
 .content-text {
     text-align: center;
     font-family: 'Libre Franklin', sans-serif;
-    /* font-weight: 300; */
     font-size: 1.3em;
     margin-top: 10px;
     color: #eee;
     max-width: 30em;
     display: flex;
-    /* animation: fadeIn 1s ease-in; */
     opacity: 0;
 }
 
-/* #content-header {
-    animation-duration: 2s;
-}
 
-#content-text {
-    animation-duration: 2s;
-} */
 
 @media (max-width: 363px) {
     .content-text {
@@ -344,6 +349,14 @@ nav a:active {
     font-weight: 100;
     font-size: 2.5em;
     text-transform: uppercase;
+    transition: ease-out 300ms;
+
+    text-shadow: -5px -5px 0 rgb(0, 0, 0);
+}
+
+.section-header:hover {
+    transform: skew(-8deg);
+    text-shadow: -7px -7px 0 rgb(0, 0, 0);
 }
 
 .section-text {
@@ -459,7 +472,6 @@ nav a:active {
 }
 
 .mb-style-2 blockquote p {
-    /* background : none repeat scroll 0 0 rgba(255, 255, 255, 0.5);  */
     box-shadow: 0 -6px 0 rgba(254, 95, 95, 0.5);
     color: rgb(255, 255, 255);
     display: inline;
@@ -483,8 +495,281 @@ nav a:active {
 }
 
 
+/* ============================================================================ */
+
+
+.gallery-box {
+    /* background: #1D1E18; */
+    margin-top: 4em;
+    padding-bottom: 2em;
+    padding-top: 4em;
+ 
+}
+
+.knockout-text {
+    color: rgb(255, 255, 255);
+    
+    margin: 0 auto;
+    width: 5em;
+    
+    text-shadow: -5px -5px 0 rgb(0, 0, 0);
+    
+    font-size: 7vw;    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    transition: ease-out 300ms;
+    cursor: default;
+
+}
+
+.knockout-text:hover {
+    transform: skew(-8deg);
+    text-shadow: -7px -7px 0 rgb(0, 0, 0);
+}
+
+
+
+@media (max-width: 600px){
+    .knockout-text{
+        font-size: 12vw;
+    }
+}
+
+
 .gallery {
-    height: 100vh;
-    background: rgba(51, 51, 51, 0.377);
-    margin-top: 2em;
+    width: 100%;
+    max-width: 900px;
+    margin: 3em auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    max-width: 15em;
+  
+    overflow: hidden;
+    height: 10em;
+    margin: .7em;
+    cursor: pointer;
+    transition: ease-out 150ms;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+    box-shadow: -3px 4px 6px rgba(0, 0, 0, 0.5); 
+    
+}
+
+.content:hover,
+.content:focus,
+.content:active {
+    transform: translateY(-5px) scale(1.05);
+    box-shadow: -5px 7px 10px rgba(0, 0, 0, 0.5);
+}
+
+.content img {
+    /* height: 90%; */
+    width: 100%;
+    object-fit: contain;
+}
+
+.modal {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.521);
+    display: none;
+
+}
+
+.modal-content {
+    position: relative;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+
+    background: #000000bd;
+    width: 90%;
+    max-width: 1200px;
+    padding: 0;
+    border-radius: .5em;
+    animation: comeDown .3s ease-in;
+    
+}
+
+@keyframes comeDown {
+    0% {
+        transform: translate(-50%, -150%);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
+}
+
+.close {
+    position: absolute;
+    font-size: 2.4em;
+    color: white;
+    right: 20px;
+    top: 8px;
+    transition: ease-out 250ms;
+    
+}
+
+.close:hover,
+.close:focus {
+    color: rgb(116, 116, 116);
+    cursor: pointer;
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 1em;
+    padding: 24px 12px;
+    position: absolute;
+    top: 0;
+    left: 1em;
+}
+
+.mySlides {
+    /* change from none to flex */
+    display: none;
+    padding: 1em;
+}
+
+@media (max-width: 800px) {
+    .mySlides {
+        /* change from none to flex */
+        display: none;
+        flex-direction: column;
+    }
+}
+
+.mySlides img {
+
+    width: 70%;
+    height: 70%;
+}
+
+@media (max-width: 800px) {
+    .mySlides img {
+        /* change from none to flex */
+
+        width: 100%;
+    }
+}
+
+.description {
+    color: white;
+    position: relative;
+    margin-top: 0;
+    margin-right: 2em;
+    margin-left: 1em;
+    margin-bottom: 1em;
+    text-align: left;
+    
+
+    display: flex;
+    flex-direction: column;
+}
+
+.description h2 {
+    margin: 0;
+    margin-top: 1.3em;
+    font-size: 2em;
+    text-transform: capitalize;
+}
+
+.description p {
+    margin-bottom: 3em;
+    font-size: .9em;
+}
+
+.description a {
+    color: white;
+    text-decoration: none;
+    width: 200px;
+    text-align: center;
+    margin: 0;
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    border-radius: .2em;
+    padding: 1em;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    transition: all ease-out 250ms;
+}
+
+@media (max-width:400px) {
+    .description a {
+        font-size: .8em;
+    }
+    .description h2 {
+        font-size: 1.5em;
+    }
+    .description p {
+        font-size: .8em;
+    }
+}
+
+.description a:hover,
+.description a:focus,
+.description a:active {
+    background: rgba(255, 255, 255, 0.6);
+    color: black;
+}
+
+
+
+
+@media (max-width: 800px) {
+    .description {
+        margin-top: 0;
+        padding: 1em;
+    }
+    .caption {
+        margin: 0;
+        font-size: 2em;
+    }
+}
+
+.next,
+.prev {
+    position: absolute;
+    cursor: pointer;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: rgba(255, 255, 255, 0.253);
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(255, 255, 255, 0.185);
+    color: rgba(255, 255, 255, 0.719);
+}
+
+@media (max-width: 600px) {
+    .next,
+    .prev {
+        top: 30%;
+    }
 }
