--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     width: 100%;
-    padding-bottom: 2em;
     margin: 0 auto;
 
     
@@ -124,6 +123,7 @@ nav a:active {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    padding: 1em;
     padding-top: 2em;
     /* background: rgba(10, 17, 40, 0.623); */
     border-radius: 1em;
@@ -496,6 +496,8 @@ nav a:active {
 
 
 /* ============================================================================ */
+/* Gallery 
+===========================================================*/
 
 
 .gallery-box {
@@ -595,6 +597,7 @@ nav a:active {
 
     background: #000000bd;
     width: 90%;
+    max-height: 100%;
     max-width: 1200px;
     padding: 0;
     border-radius: .5em;
@@ -670,7 +673,6 @@ nav a:active {
     color: white;
     position: relative;
     margin-top: 0;
-    margin-right: 2em;
     margin-left: 1em;
     margin-bottom: 1em;
     text-align: left;
@@ -682,14 +684,15 @@ nav a:active {
 
 .description h2 {
     margin: 0;
-    margin-top: 1.3em;
+    margin-top: .5em;
     font-size: 2em;
     text-transform: capitalize;
 }
 
 .description p {
-    margin-bottom: 3em;
+    margin-bottom: 2em;
     font-size: .9em;
+    margin-right: 2em;
 }
 
 .description a {
@@ -708,13 +711,23 @@ nav a:active {
 
 @media (max-width:400px) {
     .description a {
-        font-size: .8em;
+        font-size: .7em;
+        width: 150px;
+        padding: .8em;
     }
     .description h2 {
         font-size: 1.5em;
     }
     .description p {
         font-size: .8em;
+    }
+}
+
+@media (max-width: 800px) {
+    .description a {
+        font-size: .75em;
+        width: 150px;
+        padding: .8em;
     }
 }
 
@@ -732,6 +745,7 @@ nav a:active {
     .description {
         margin-top: 0;
         padding: 1em;
+        margin-bottom: 0;
     }
     .caption {
         margin: 0;
@@ -771,5 +785,100 @@ nav a:active {
     .next,
     .prev {
         top: 30%;
+    }
+}
+
+
+/* contact form */
+.contact-container {
+    width: 100%;
+    height: 100%;
+    padding: 3em;
+    margin: 0;
+    /* background: rgb(78, 4, 78); */
+    color: white;
+}
+
+.contact-wrapper {
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 2em;
+    border-radius: 1em;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.486);
+}
+
+.contact-header {
+    margin: 0;
+    margin-bottom: 1em;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2em;
+}
+
+.form-content form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.form-content form p {
+    margin: 0;
+}
+.form-content form p label {
+    padding-bottom: .5em;
+}
+
+.form-content form .full {
+    grid-column: 1 / 3;
+}
+
+.form-content form input,
+.form-content form textarea {
+    width: 100%;
+    padding: .4em;
+    border: 1px solid coral;
+    outline: none;
+}
+
+.form-content form button {
+    background: coral;
+    padding: 1em;
+    width: 10em;
+    cursor: pointer;
+    color: white;
+    border: 1px solid coral;
+    text-transform: uppercase;
+    transition: ease-out 250ms;
+    border-radius: .2em;
+}
+
+.form-content form button:hover,
+.form-content form button:focus{
+    background: white;
+    color: coral;
+    outline: 0;
+}
+
+@media (max-width: 800px) {
+    .form-content form {
+        grid-template-columns: 1fr;
+    }
+    .form-content p {
+        grid-column: 1 / 2;
+    }
+    .form-content form .full {
+        grid-column: 1 / 2;
+    }
+}
+
+@media (max-width:600px) {
+    .contact-wrapper {
+        width: 100%;
+        border-radius: 0; 
+    }
+    .contact-container {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
