--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,7 @@ nav a:active {
     left: 50%;
 
     transform: translate(-50%, -50%);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.89);
 
     background: #000000bd;
     width: 90%;
