--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ nav a {
         text-transform: uppercase;
         font-size: 1em;
         text-decoration: none;
-        color:rgb(10, 17, 40);
+        color:rgb(255, 255, 255);
         padding: .7em;
         margin-top: 1em;
         transition: ease-in-out 250ms;
@@ -529,7 +529,7 @@ nav a:active {
 }
 
 .knockout-text:hover {
-    transform: skew(-8deg);
+    transform: skew(-8deg) rotateY(8deg);
     text-shadow: -7px -7px 0 rgb(0, 0, 0);
 }
 
