--- a/css/style.css
+++ b/css/style.css
@@ -796,6 +796,9 @@ nav a:active {
 
 
 /* contact form */
+/* =========================================================== */
+
+
 .contact-container {
     width: 100%;
     height: 100%;
@@ -843,8 +846,14 @@ nav a:active {
 .form-content form textarea {
     width: 100%;
     padding: .4em;
-    border: 1px solid coral;
+    border: 0;
     outline: none;
+}
+
+.form-content form input[type="text"], 
+.form-content form textarea {
+    background-color: rgba(0, 0, 0, 0.377);
+    color: white;
 }
 
 .form-content form button {
